<resources>
    <string name="app_name">supporters</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="schedule">This is schedule fragment</string>
    <string name="documents">This is documents fragment</string>
    <string name="presentation">This is presentation fragment</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="set_timer">時間を入力</string>
    <string name="hour">時</string>
    <string name="min">分</string>
    <string name="sec">秒</string>
    <string name="setting">設定</string>
    <string name="calc">更新</string>
    <string name="add">追加</string>
    <string name="day_default">選択してください</string>
    <string name="calender">選択</string>
    <string name="name">氏名</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
