<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AFEDFF"
    android:orientation="vertical"
    android:gravity="center_horizontal" >

    <TextView
        android:id="@+id/timer"
        android:layout_marginTop="60dp"
        android:textSize="164dp"
        android:textColor="#00f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/timer_max"
        android:layout_margin="8dp"
        android:textSize="32dp"
        android:textColor="#00f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/setting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:drawableLeft="@drawable/ic_timer_black_24dp"
        android:background="@drawable/custom_button"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:paddingBottom="15dp"
        android:text="設定"
        android:textSize="36sp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/custom_play_button"
            android:gravity="center_vertical|right"
            android:background="@drawable/custom_button"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="20dp"
            android:paddingBottom="15dp"
            android:textSize="36sp"
            android:checked="false"
            android:textOn="@string/pause"
            android:textOff="@string/start" />

        <Button
            android:id="@+id/stop_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/ic_stop_black_24dp"
            android:gravity="center_vertical|right"
            android:background="@drawable/custom_button"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="20dp"
            android:paddingBottom="15dp"
            android:textSize="36sp"
            android:text="@string/stop" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar4"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:progressDrawable="@drawable/custom_progress"
        android:max="100"
        android:progress="100" />

    <TextView
        android:id="@+id/daihon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ems="10"
        android:layout_margin="24dp"
        android:background="#f0f8ff"
        android:inputType="textMultiLine"
        android:textColor="#000000"
        android:text="だいほん"
        android:textSize="30sp" />

</LinearLayout>